--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -15,7 +15,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Recent Activity <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to "Your Recent Commits", user_commits_path %></li>
-            <li><%= link_to "Your Following's Commits", following_commits_path %></li>
+            <li><%= link_to "Your Following's Recent Commits", following_commits_path %></li>
           </ul>
         </li>
       </ul>
